<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="@dimen/medium_space">


    <ImageView
        android:id="@+id/andela_logo_iv"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/medium_space"
        android:src="@drawable/ic_andela_logo"
        android:contentDescription="@string/app_icon_desc"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/andela_logo_iv"
        android:layout_marginTop="@dimen/standard_space"
        android:fontFamily="@font/oswald"
        android:gravity="center"
        android:text="@string/alc_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_text"/>


    <TextView
        android:id="@+id/subtitle_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_space"
        android:fontFamily="@font/oswald"
        android:gravity="center"
        android:text="@string/welcome_to_alc"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv" />


    <Button
        android:id="@+id/my_profile_btn"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginEnd="@dimen/medium_space"
        android:background="@drawable/round_white_bg"
        android:fontFamily="@font/oswald"
        android:text="@string/my_profile"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/large_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        android:onClick="goToMyProfile"/>

    <Button
        android:id="@+id/about_alc_btn"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginEnd="@dimen/medium_space"
        android:layout_marginBottom="@dimen/medium_space"
        android:background="@drawable/round_accent_bg"
        android:fontFamily="@font/oswald"
        android:text="@string/about_alc"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/large_text"
        app:layout_constraintBottom_toTopOf="@id/my_profile_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="goToAboutScreen"/>
</android.support.constraint.ConstraintLayout>